@@ -4,7 +4,8 @@ zeit.content.article changes
 3.1.4 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Position cursor at the click position when entering editable mode
+  (VIV-11795).
 
 
 3.1.3 (2014-02-18)
